--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     </div>
 
     <script>
+        // Функция для добавления студента в таблицу
         function addStudent() {
             const surname = document.getElementById('surname').value;
             const name = document.getElementById('name').value;
@@ -96,19 +97,21 @@
             const character = document.getElementById('character').value;
 
             if (surname && name && patronymic && birthdate && character) {
-                const table = document.getElementById('studentsTable').getElementsByTagName('tbody')[0];
-                const newRow = table.insertRow();
+                const student = { surname, name, patronymic, birthdate, character };
+                
+                // Получаем сохраненные данные из localStorage
+                let students = JSON.parse(localStorage.getItem('students')) || [];
 
-                const cell1 = newRow.insertCell(0);
-                cell1.textContent = `${surname} ${name} ${patronymic}`;
+                // Добавляем нового ученика в массив
+                students.push(student);
 
-                const cell2 = newRow.insertCell(1);
-                cell2.textContent = birthdate;
+                // Сохраняем обновленный массив студентов в localStorage
+                localStorage.setItem('students', JSON.stringify(students));
 
-                const cell3 = newRow.insertCell(2);
-                cell3.textContent = character;
+                // Добавляем строку в таблицу
+                addRowToTable(student);
 
-                // Clear input fields after adding student
+                // Очищаем поля ввода
                 document.getElementById('surname').value = '';
                 document.getElementById('name').value = '';
                 document.getElementById('patronymic').value = '';
@@ -118,6 +121,32 @@
                 alert("Пожалуйста, заполните все поля!");
             }
         }
+
+        // Функция для добавления строки в таблицу
+        function addRowToTable(student) {
+            const table = document.getElementById('studentsTable').getElementsByTagName('tbody')[0];
+            const newRow = table.insertRow();
+
+            const cell1 = newRow.insertCell(0);
+            cell1.textContent = `${student.surname} ${student.name} ${student.patronymic}`;
+
+            const cell2 = newRow.insertCell(1);
+            cell2.textContent = student.birthdate;
+
+            const cell3 = newRow.insertCell(2);
+            cell3.textContent = student.character;
+        }
+
+        // Функция для загрузки студентов из localStorage при загрузке страницы
+        function loadStudents() {
+            const students = JSON.parse(localStorage.getItem('students')) || [];
+            students.forEach(student => {
+                addRowToTable(student);
+            });
+        }
+
+        // Загружаем студентов при загрузке страницы
+        window.onload = loadStudents;
     </script>
 
 </body>
